--- a/gsi526.html
+++ b/gsi526.html
@@ -88,9 +88,9 @@
 					<li>Prova 1 - 25 pts <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i></li>
 					<li>Prova 2 - 30 pts <b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i></li>
 					<li>Prova 3 - 30 pts <b>(06/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
-					<li>Lista 1 - 5 pts <b>(01/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 2 - 5 pts <b>(29/07)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<li>Lista 3 - 5 pts <b>(06/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Lista 1 - 5 pts <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
+					<li>Lista 2 - 5 pts <b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
+					<li>Lista 3 - 5 pts <b>(06/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
 					<div>
@@ -156,8 +156,8 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/07</b>)</a></button></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>29/07</b>)</a></button></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>29/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>06/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
