--- a/poo-lab.html
+++ b/poo-lab.html
@@ -117,9 +117,9 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-				     	<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+				     	<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
