--- a/poo-lab.html
+++ b/poo-lab.html
@@ -118,7 +118,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 				     	<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/3.Introdução a Java.ppt"> Aula 3 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/4.Semântica de Referência.ppt"> Aula 4 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/5.Associação entre Objetos.ppt"> Aula 5 - Associação entre Objetos</a></li>
@@ -182,6 +182,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica8/src"> <i>Código Incompleto da Prática 8</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99439"> Aula Síncrona Gravada - Prática 1</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100038"> Aula Síncrona Gravada - Prática 2</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100589"> Aula Síncrona Gravada - Prática 3</a></li>
