--- a/gsi526.html
+++ b/gsi526.html
@@ -87,7 +87,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i></li>
 					<li>Prova 2 - 30 pts <b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i>Aulas 08, 09, 10 e 11</i></li>
-					<li>Prova 3 - 30 pts <b>(06/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i>--></li>
+					<li>Prova 3 - 30 pts <b>(06/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i></li>
 					<li>Lista 1 - 5 pts <b>(01/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 5 pts <b>(29/07)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 3 - 5 pts <b>(06/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
