--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -121,7 +121,7 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
@@ -162,7 +162,7 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
-					<!--<li><i class="icon-stackoverflow"></i><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Curso gratuito de Python</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Curso gratuito de Python</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Videoaula sobre Django 2 Web Framework</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=Dzuiy-JNi-E"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Criando um Blog com Python e o framework Django</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/curso/ngmasters_javascript"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso Completo de JavaScript</a></li>
@@ -170,7 +170,7 @@
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ErjWNvP6mko"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso de React para Completos Iniciantes</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso de AngularJS para Completos Iniciantes</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Videoaula sobre como criar um Blog usando Node.js e React</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> [Java] Curso Completo do framework Java Spring Boot</a></li> -->
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> [Java] Curso Completo do framework Java Spring Boot</a></li>
 					</ul>
 					</div> 
 					<div>
