--- a/gsi526.html
+++ b/gsi526.html
@@ -153,7 +153,7 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto (Dia <b>08/04</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
 					</ul>
 					</div> -->
-					<div>
+					<!--<div>
 					<b>Listas:</b> 
 					<ul>
 					<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/07</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
@@ -170,8 +170,8 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
-					</ul>-->
-					</div> 
+					</ul>
+					</div> -->
 				</div> 
 			</div>
 		</div>
